syntax = "proto3";
package api;
option go_package = "github.com/jsiebens/ionscale/pkg/gen;api";

message GetMachineRoutesRequest {
  uint64 machine_id = 1;
}

message GetMachineRoutesResponse {
  repeated RoutableIP routes = 1;
}

message SetMachineRoutesRequest {
  uint64 machine_id = 1;
  repeated string allowedIps = 2;
}

message RoutableIP {
  string advertised = 1;
  bool allowed = 2;
}
